--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <b>Distance: 4.5 Miles</b>
                         <p class="card-text">This walking tour combines many famous D.C. monuments and tourist areas, along with lesser known architectural and historical spots. Ends with a great view of D.C. </p>
                     </div>
-                    <div class="card-footer"><a class="btn btn-logo btn-sm" href="#!">Tickets</a></div>
+                    <div class="card-footer"><a class="btn btn-logo btn-sm" href="https://www.eventbrite.com/e/washington-dc-architecture-and-history-walking-tour-tickets-918614650147?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl">Tickets</a></div>
                 </div>
             </div>
             <div class="col-md-4 mb-5">
